# buildroot

./: .gitignore  .gitlab-ci.yml  README-ja.md  README-zh.md  README.md  build.sh
.github/workflows/: duoimage.yml
buildroot-2021.05/configs/: milkv-duo-sd_musl_riscv64_defconfig  milkv-duo-spinand_musl_riscv64_defconfig  milkv-duo-spinor_musl_riscv64_defconfig  milkv-duo256m-sd_musl_riscv64_defconfig  milkv-duo256m-spinand_musl_riscv64_defconfig  milkv-duo256m-spinor_musl_riscv64_defconfig  milkv-duo256m_musl_riscv64_defconfig  milkv-duo_musl_riscv64_defconfig  milkv-duos-emmc_musl_riscv64_defconfig  milkv-duos-ota-sd_musl_riscv64_defconfig  milkv-duos-sd_musl_riscv64_defconfig
buildroot-2021.05/package/: Config.in
device/: gen_swu.sh
device/milkv-duo/: boardconfig.sh
device/milkv-duo-sd/: boardconfig.sh  genimage.cfg
device/milkv-duo-spinand/: boardconfig.sh
device/milkv-duo-spinor/: boardconfig.sh
device/milkv-duo256m/: boardconfig.sh
device/milkv-duo256m-sd/: boardconfig.sh  genimage.cfg
freertos/: build_freertos.sh
freertos/cvitek/hal/cv181x/pwm/: CMakeLists.txt  drv_pwm.c  drv_pwm.h
freertos/cvitek/hal/cv181x/pwm/include/: hal_pwm.h
freertos/cvitek/hal/cv181x/pwm/src/: hal_pwm.c
freertos/cvitek/task/comm/: CMakeLists.txt
freertos/cvitek/task/comm/include/: feetech.h  milkv_duo_io.h  sts3215.h  uart.h
freertos/cvitek/task/comm/led_control/: milkv_duo256m_io.c  milkv_duo_io.c  milkv_duos_io.c
freertos/cvitek/task/comm/src/riscv64/: comm_main.c  feetech.c  sts3215.c  uart.c
swupdate-staging/: sw-description
tools/: zbot_updater.py
(+80 files in other folders)
